# zipde

./: .gitignore  compare.py  dashboard.py  formatter.py  get_sample_queries.py  pyproject.toml  sql_ddl.py  sql_ddl_reformatted.py  sqlserver.py  training-remote.py  training.py  transpose.py  zipde.py
