[tool.poetry]
name = "zipde"
version = "0.1.0"
description = ""
authors = ["Travis Vasceannie <travis.vas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyodbc = "^5.2.0"
psycopg2-binary = "^2.9.10"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
